K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host:   # Replace with your actual domain
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: logical-tier-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-tier-service
                port:
                  number: 3000
